// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput snapshots should be rendered with maximum props 1`] = `
<div
  className="container uui-input-box -clickable root root uui-size-36 mode-inline"
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    inputMode="numeric"
    max={50}
    min={0}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="0"
    tabIndex={0}
    type="number"
    value=""
  />
  <div
    className="uui-numeric-input-button-group"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
      onClick={[Function]}
      role="button"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
      onClick={[Function]}
      role="button"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`NumericInput snapshots should be rendered with minimum props 1`] = `
<div
  className="container uui-input-box -clickable root root uui-size-36 mode-form"
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input"
    inputMode="numeric"
    max={50}
    min={0}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="0"
    tabIndex={0}
    type="number"
    value=""
  />
  <div
    className="uui-numeric-input-button-group"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
      onClick={[Function]}
      role="button"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
      onClick={[Function]}
      role="button"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;
